# Universim2

./: .gitignore  CMakeLists.txt  README.md  universim2-v0.1
universim2/: .clang-format  CMakeLists.txt  asteroid.cpp  asteroid.hpp  comet.cpp  comet.hpp  constants.hpp  date.cpp  date.hpp  drawObject.cpp  drawObject.hpp  galacticCore.cpp  galacticCore.hpp  gpuFunctions.cl  main.cpp  main.hpp  matrix3d.cpp  matrix3d.hpp  moon.cpp  moon.hpp  plane.cpp  planet.cpp  planet.hpp  point2d.cpp  point2d.hpp  positionVector.cpp  positionVector.hpp  renderTriangle.cpp  renderTriangle.hpp  renderer.cpp  renderer.hpp  star.cpp  star.hpp  starSystem.cpp  starSystem.hpp  stellarObject.cpp  stellarObject.hpp  stellarObjectRenderFace.cpp  stellarObjectRenderFace.hpp  test.cpp  (+9 more)
universim2/files/: MoonsOfJupiterAdjusted.csv  MoonsOfNeptuneAdjusted.csv  StarColours.txt
universim2/include/glad/: glad.h
universim2/include/graphicInterface/: background.shader  basic.shader  closeObjects.shader  renderTriangle.hpp  renderer.hpp  stellarObjectRenderFace.hpp
universim2/include/helpers/: constants.hpp  matrix3d.hpp  plane.hpp  threadUtils.hpp  timer.hpp  tree.hpp  treeCodeNode.hpp
universim2/include/stellarObjects/: comet.hpp  galacticCore.hpp  moon.hpp  planet.hpp  star.hpp  starSystem.hpp  stellarObject.hpp
universim2/src/: main.cpp  renderer.cpp  renderer.hpp
universim2/src/files/: StarColours.txt
universim2/src/graphicInterface/: drawObject.cpp  point2d.cpp  renderTriangle.cpp  renderTriangle.hpp  renderer.cpp  stellarObjectRenderFace.cpp  stellarObjectRenderFace.hpp  window.cpp  window.hpp
universim2/src/helpers/: date.cpp  matrix3d.cpp  matrix3d.hpp  plane.cpp  plane.hpp  positionVector.cpp  simplexNoise.cpp  simplexNoise.hpp  timer.cpp  tree.cpp  tree.hpp  treeCodeNode.cpp  treeCodeNode.hpp
universim2/src/stellarObjects/: asteroid.cpp  comet.cpp  galacticCore.cpp  moon.cpp  planet.cpp  star.cpp  star.hpp  starSystem.cpp  starSystem.hpp  stellarObject.cpp  stellarObject.hpp
universim2/test_files/: CMakeLists.txt  a.out  compile_commands.json  gl_test  gpuFunctions.cl  gpu_test  gpu_test.cpp  test.cpp  window_test  window_test.cpp
universim2/test_files/src/: glad.c  window_test.cpp
